Fixed diamond sticking out of the side on different non-mobile screen sizes.

--- a/src/sass/components/aside.scss
+++ b/src/sass/components/aside.scss
@@ -17,11 +17,10 @@ aside.nav {
     }
 
     * {
-        //opacity:0;
         transition:all 0.3s;
 
         @include screen($sm) {
-            //opacity:1;
+            opacity:1;
         }
     }
 
@@ -191,6 +190,12 @@ aside.nav {
         transform:translateX(-90%);
     }
 
+    * {
+        @include screen($xs) {
+            opacity:0;
+        }
+    }
+
     #nav-close {
         opacity:0;
         animation:none;
@@ -203,12 +208,13 @@ aside.nav {
 
 #nav-open {
     position:fixed;
-    left:10px;
+    left:span(1);
+    margin-left:-25px;
     background-image:url("/media/aside.png");
     z-index:1;
 
     &:hover {
-        margin-left:5px;
+        margin-left:-20px;
     }
 }
 
